--- a/csharp/CSharpBencher/packages.config
+++ b/csharp/CSharpBencher/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CassandraCSharpDriver" version="2.7.2" targetFramework="net452" />
+  <package id="CassandraCSharpDriver" version="2.8.0-alpha1" targetFramework="net46" />
   <package id="lz4net" version="1.0.5.93" targetFramework="net452" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" />
 </packages>
