--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ Thumbs.db
 *.cache
 *.ilk
 *.log
+*.binlog
 [Bb]in
 [Dd]ebug*/
 *.lib
@@ -29,6 +30,8 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 output/**
+.vs/
+.idea/
+local-*
 
 **/packages/**
-.vs
